Corrected alignment tag in lang and theme boxes.

--- a/www.i2p2/static/styles/dark.css
+++ b/www.i2p2/static/styles/dark.css
@@ -353,7 +353,7 @@ tr {
 	/* -moz-box-shadow: 0 2px 2px 1px #bbbbff; */
 	clear: both;
 	width:auto;
-	align: center;
+	text-align: center;
 	}
 
 		.themebox {
@@ -367,7 +367,7 @@ tr {
 /*  -moz-box-shadow: 0 2px 2px 1px #bbbbff; */
 	  clear: both;
 	  width:auto;
-	  align: center;
+	  text-align: center;
 	}
 
 .footer {
