--- a/www.i2p2/static/styles/light.css
+++ b/www.i2p2/static/styles/light.css
@@ -336,7 +336,7 @@ tr {
 /*  -moz-box-shadow: 0 2px 2px 1px #bbbbff; */
 	  clear: both;
 	  width:auto;
-	  align: center;
+	  text-align: center;
 	}
 	
 		.themebox {
@@ -350,7 +350,7 @@ tr {
 /*  -moz-box-shadow: 0 2px 2px 1px #bbbbff; */
 	  clear: both;
 	  width:auto;
-	  align: center;
+	  text-align: center;
 	}
 
 .footer {
